--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tipsekolah.com</title>
     <link rel="stylesheet" href="tipsekolah_style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
@@ -15,7 +18,19 @@
             <a href="index.html">
               <div id="logo-img"></div>
             </a>
-            
+            <a href="index.html" id="home-button">
+              BERANDA
+            </a>
+            <a href="https://collegeinfogeek.com/learning/" id="belajar-button">
+              BELAJAR &#9660;
+            </a>
+            <a href="https://collegeinfogeek.com/budgeting-for-college-students/"
+            id="keuangan-button">
+              KEUANGAN &#9660;
+            </a>
+            <a href="https://collegeinfogeek.com/career/" id="karir-button">
+              KARIR &#9660;
+            </a>
           </div>
         </div>
 
