--- a/index.html
+++ b/index.html
@@ -31,13 +31,21 @@
             <a href="https://collegeinfogeek.com/career/" id="karir-button">
               KARIR &#9660;
             </a>
+            <a href="https://collegeinfogeek.com/resources/" id="lainlain-button">
+              LAIN-LAIN &#9660;
+            </a>
+            <form onsubmit="event.preventDefault();" role="search">
+              <label for="search">Search for stuff</label>
+              <input id="search" type="search" placeholder="Search..." autofocus required />
+              <button type="submit">Go</button>    
+            </form>
           </div>
         </div>
 
       </nav>>
     </header>
       
-        Testing
+        Testing ye
       </div>
     </div>
   </body>
